--- a/zernovarka/scss/layout/_header.scss
+++ b/zernovarka/scss/layout/_header.scss
@@ -298,6 +298,7 @@ header{
 		color: #ffffff;
 		text-transform: uppercase;
 		letter-spacing: 0.05em;
+		cursor: pointer;
 		&.active{
 			color: #f8b30e;
 		}
