--- a/zernovarka/css/style.css
+++ b/zernovarka/css/style.css
@@ -436,6 +436,7 @@ header {
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 0.05em;
+  cursor: pointer;
 }
 .currency span.active {
   color: #f8b30e;
@@ -878,14 +879,14 @@ h3 {
 }
 
 .icon-load {
-  background: url(../img/loader.gif) no-repeat left top;
-  width: 40px;
-  height: 40px;
+  background: url(../img/loader.png) no-repeat left top;
+  width: 276px;
+  height: 300px;
   position: fixed;
   left: 50%;
   top: 50%;
-  margin-left: -20px;
-  margin-left: -20px;
+  margin-left: -138px;
+  margin-top: -150px;
   display: none;
 }
 
@@ -1693,6 +1694,7 @@ h3 {
 .modal-form {
   width: 280px;
   height: 355px;
+  margin-top: -177.5px;
   padding: 30px 45px 20px;
   position: fixed;
   margin-left: -140px;
@@ -2402,6 +2404,7 @@ h3 {
   font: 400 10px 'Roboto';
   padding-top: 7px;
   padding-left: 30px;
+  line-height: 17px;
 }
 .basket__check {
   width: 31px;
