--- a/autourval/scss/layout/_header.scss
+++ b/autourval/scss/layout/_header.scss
@@ -24,6 +24,13 @@ header{
 	text-indent: -9999px; 
 	text-align: left;
 }
+.wwcheck__part i{
+	display: inline-block; 
+	background: url('../img/sprites.png') no-repeat; 
+	overflow: hidden; 
+	text-indent: -9999px; 
+	text-align: left;
+}
 .header{
 	background: #484a42;
 	border-bottom: 2px solid #393b35;
