--- a/autourval/scss/layout/_footer.scss
+++ b/autourval/scss/layout/_footer.scss
@@ -23,6 +23,9 @@ footer{
 		a{
 			font: 400 12px/14.4px Montserrat,sans-serif;
 	    	color: #393b35;
+	    	&:hover{
+	    		color: #ffcb33;
+	    	}
 		}
 	}
 	&__soc{
@@ -179,6 +182,16 @@ footer{
 		}
 		&__right{
 			width: 100%;
+		}
+		&__bott{
+			.wrapper{
+				&.flex{
+					justify-content: center;
+				}
+			}
+			p{
+				text-align: center;
+			}
 		}
 	}
 }
