--- a/cheese_land/scss/layout/_content.scss
+++ b/cheese_land/scss/layout/_content.scss
@@ -24,7 +24,7 @@ $font2: 'Conv_ProximaNova-Bold';
     -ms-flex-pack: start;
 }
 .wrapper{
-	min-width: $min-width;
+	min-width: 300px;
 	max-width: 1240px;
 	margin: 0 auto;
 	position: relative;
@@ -124,6 +124,12 @@ h3{
 			letter-spacing: 0.015em;
 			color: #454545;
 		}
+		h3{
+			font: 24px $fontB;
+			letter-spacing: 0.015em;
+			color: #454545;
+			margin-bottom: 10px;
+		}
 		p{
 			font: 18px/38px $fontR;
 			letter-spacing: 0.015em;
@@ -158,6 +164,18 @@ h3{
 		left: 43px;
 		top: 60px;
 		z-index: 3;
+		img{
+			width: 29px;
+		}
+		&:hover{
+			opacity: 0.9;
+		}
+	}
+	&__img{
+		width: 610px;
+		&.flex{
+			justify-content: center;
+		}
 	}
 }
 .cows{
@@ -173,6 +191,12 @@ h3{
 			position: absolute;
 			bottom: 30px;
 			z-index: 3;
+			img{
+				width: 9px;
+			}
+			&:hover{
+				opacity: 0.9;
+			}
 		}
 		.slick-prev{
 			left: 41px;
@@ -185,34 +209,690 @@ h3{
 		}
 	}
 }
-
-
-
-
-
-
-
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    body{min-height: 100hv; width: 100%; display: flex; flex-direction: column;}
+.about{
+	padding: 70px 0 90px;
 }
-@media screen and (max-width: 1200px) {
-	
+.title{
+	font: 48px $fontB;
+	color: #454545;
+	text-align: center;
+	letter-spacing: 0.015em;
+}
+.products{
+	.wrapper{
+		&.flex{
+			flex-direction: column;
+			align-items: center;
+			justify-content: flex-start;
+		}
+	}
+	.border{
+		margin-bottom: 90px;
+	}
+	&__item{
+		width: 100%;
+		margin-bottom: 165px;
+	}
+	&__img{
+		width: 560px;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__info{
+		width: 610px;
+		&_left{
+			margin-left: 25px;
+		}
+	}
+	&__title{
+		margin-bottom: 20px;
+		&.flex{
+			justify-content: flex-start;
+		}
+		h3{
+			font: 30px $fontB;
+			color: #454545;
+			letter-spacing: 0.015em;
+			margin-right: 35px;
+		}
+		span{
+			font: 16px $font1;
+			color: #454545;
+			letter-spacing: 0.015em;
+			padding-top: 8px;
+		}
+	}
+	&__text{
+		font: 18px/36px $fontB;
+		color: #454545;
+		letter-spacing: 0.015em;
+		margin-bottom: 20px;
+	}
+	&__more{
+		&.flex{
+			justify-content: flex-start;
+		}
+		span{
+			font: 36px $fontB;
+			color: #3d2614;
+			letter-spacing: 0.015em;
+			margin-right: 70px;
+		}
+		button{
+			background: #fff;
+			border: 1px solid #a6a6a6;
+			font: 16px $fontB;
+			color: #3d2614;
+			letter-spacing: 0.015em;
+			padding: 9px 42px;
+			transition: 0.2s ease-in-out;
+			&:hover{
+				color: #fff;
+				background: #a6a6a6;
+				opacity: 0.9;
+			}
+		}
+	}
+}
+.comments{
+	background: url(../img/banner2.jpg) center center no-repeat;
+	background-size: cover;
+	box-shadow: 0 0 0 9999px rgba(0,0,0,0.67) inset;
+	padding: 12% 0 14%;
+	&__slider{
+		width: 1030px;
+		margin: 0 auto;
+		.slick-prev, .slick-next{
+			background: none;
+			border: 0;
+			padding: 0;
+			position: absolute;
+			top: 50%;
+			img{
+				width: 24px;
+			}
+		}
+		.slick-prev{
+			left: -105px;
+		}
+		.slick-next{
+			right: -105px;
+			img{
+				transform: rotate(180deg);
+			}
+		}
+	}
+	&__slide{
+		&.flex{
+			display: flex !important;
+			justify-content: flex-end;
+		}
+		&.slick-current{
+			&.flex{
+				justify-content: flex-start;
+			}
+		}
+	}
+	&__text{
+		width: 400px;
+		font: 16px/28px $font1;
+		color: #fff;
+		letter-spacing: 0.015em;
+		margin: 20px 0;
+	}
+	&__quotes{
+		width: 400px;
+		img{
+			width: 116px;
+    		margin-bottom: -18px;
+		}
+	}
+	&__account{
+		width: 400px;
+		&.flex{
+			justify-content: flex-start;
+			align-items: flex-start;
+		}
+	}
+	&__img{
+		width: 106px;
+		height: 73px;
+		margin-right: 15px;
+		img{
+			min-width: 100%;
+			height: 100%;
+		}
+	}
+	&__info{
+		span{
+			font: 16px/28px $font1;
+			letter-spacing: 0.015em;
+			color: #cbcbcb;
+		}
+	}
+	&__name{
+		font: 16px/28px $font1;
+		color: #fff;
+		letter-spacing: 0.015em;
+	}
+}
+.delivery{
+	margin-bottom: 185px;
+	&__img{
+		width: 46%;
+		margin-right: auto;
+    	margin-left: 0;
+    	&.flex{
+    		justify-content: flex-end;
+    	}
+	}
+}
+.gallery{
+	margin-bottom: 160px;
+	&.flex{
+		justify-content: center;
+	}
+	.title{
+		width: 100%;
+	}
+	.border{
+		margin-bottom: 95px;
+	}
+	&__cont{
+		width: 100%;
+		&.flex{
+			align-items: stretch;
+		}
+	}
+	&__item{
+		width: 25%;
+		/*height: 322px;*/
+		&.flex{
+			justify-content: center;
+		}
+		a{
+			height: 100%;
+			width: 100%;
+			&:hover{
+				opacity: 0.9;
+			}
+		}
+		img{
+			height: 100%;
+			width: 100%;
+		}
+	}
 }
 
-@media screen and (min-width: 992px){
-	
-}
 
-@media screen and (max-width: 991px) {
-	
+
+
+
+@media screen and (min-width: 992px) and (max-width: 1250px) {
+	.wrapper{
+		max-width: 950px;
+	}
+	.banner{
+		padding: 8% 0;
+		h1{
+			font: 65px/75px Conv_ANTQUAB;
+		}
+		h2{
+			font: 30px/40px Conv_HelveticaNeueCyr-Roman;
+		}
+	}
+	.section{
+		&__1{
+		    padding: 65px 0 70px;
+		}
+		&__text{
+			width: 450px;
+			h2{
+				font: 36px Conv_ANTQUAB;
+			}
+			h3{
+				font: 18px Conv_ANTQUAB;
+			}
+			p{
+				font: 13px/26px Conv_BKANT;
+				margin-bottom: 15px;
+			}
+		}
+		&__slider{
+			height: auto;
+		}
+		&__img{
+			width: 450px;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	.border{
+		&_2{
+			margin: 25px 0 20px;
+		}
+	}
+	.cows{
+		&__slider{
+			width: 575px;
+		}
+	}
+	.about{
+		padding: 60px 0 60px;
+	}
+	.title{
+		font: 36px Conv_ANTQUAB;
+	}
+	.products{
+		.border{
+			margin-bottom: 60px;
+		}
+		&__img{
+			width: 420px;
+			img{
+				width: 90%;
+			}
+		}
+		&__info{
+			width: 450px;
+		}
+		&__title{
+			h3{
+				font: 24px Conv_ANTQUAB;
+			}
+			span{
+				font: 13px Conv_HelveticaNeueCyr-Roman;
+			}
+		}
+		&__text{
+			font: 14px/28px Conv_ANTQUAB;
+		}
+		&__more{
+			span{
+				font: 32px Conv_ANTQUAB;
+				margin-right: 45px;
+			}
+			button{
+				padding: 7px 35px;
+				font: 14px Conv_ANTQUAB;
+			}
+		}
+		&__item{
+			margin-bottom: 100px;
+		}
+	}
+	.comments{
+		padding: 8% 0 10%;
+		&__slider{
+			width: 800px;
+			.slick-prev{
+				left: -60px;
+			}
+			.slick-next{
+				right: -60px;
+			}
+		}
+		&__quotes{
+			width: 345px;
+			img{
+				width: 90px;
+			}
+		}
+		&__text{
+			width: 345px;
+    		font: 14px/28px Conv_HelveticaNeueCyr-Roman;
+    		margin: 15px 0;
+		}
+		&__account{
+			width: 345px;
+		}
+	}
+	.delivery{
+		margin-bottom: 90px;
+		&__img{
+			img{
+				width: 685px;
+			}
+		}
+	}
+	.gallery{
+		margin-bottom: 100px;
+		.border{
+			margin-bottom: 60px;
+		}
+	}
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-	
+	.wrapper{
+		max-width: 740px;
+	}
+	.banner{
+		padding: 6% 0;
+		h1{
+		    font: 50px/60px Conv_ANTQUAB;
+		}
+		h2{
+			font: 23px/34px Conv_HelveticaNeueCyr-Roman;
+		}
+	}
+	.border{
+		margin: 20px 0;
+		&_2{
+			margin: 20px 0 15px;
+    		width: 40px;
+    		height: 2px;
+		}
+	}
+	.section{
+		&__text{
+			width: 350px;
+			h2{
+				font: 28px Conv_ANTQUAB;
+			}
+			p{
+			    font: 12px/22px Conv_BKANT;
+			    margin-bottom: 14px;
+			}
+		}
+		&__slider{
+			height: auto;
+		}
+		&__1{
+			padding: 50px 0 60px;
+		}
+		&__img{
+			width: 370px;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	.cows{
+		&__slider{
+			width: 480px;
+		}
+	}
+	.about{
+		padding: 50px 0 70px;
+	}
+	.title{
+		font: 35px Conv_ANTQUAB;
+	}
+	.products{
+		&__img{
+			width: 350px;
+			img{
+				width: 90%;
+			}
+		}
+		&__info{
+			width: 350px;
+			h3{
+				font: 18px Conv_ANTQUAB;
+				margin-right: 25px;
+			}
+			span{
+				font: 11px Conv_HelveticaNeueCyr-Roman;
+				padding-top: 3px;
+			}
+		}
+		&__title{
+			margin-bottom: 10px;
+		}
+		&__text{
+		    font: 12px/24px Conv_ANTQUAB;
+		    margin-bottom: 15px;
+		}
+		&__more{
+			span{
+				font: 28px Conv_ANTQUAB;
+			}
+			button{
+				padding: 6px 30px;
+				font: 12px Conv_ANTQUAB;
+			}
+		}
+		.border{
+			margin-bottom: 50px;
+		}
+		&__item{
+			margin-bottom: 90px;
+		}
+	}
+	.comments{
+		padding: 8% 0 9%;
+		&__slider{
+			width: 650px;
+		}
+		&__quotes{
+			width: 250px;
+			img{
+				width: 70px;
+			}
+		}
+		&__text{
+			width: 250px;
+			font: 12px/24px Conv_HelveticaNeueCyr-Roman;
+			margin: 10px 0;
+		}
+		&__account{
+			width: 250px;
+		}
+		&__img{
+			width: 80px;
+    		height: auto;
+			img{
+				width: 100%;
+			}
+		}
+		&__name{
+			font: 13px/26px Conv_HelveticaNeueCyr-Roman;
+		}
+		&__info{
+			span{
+				font: 13px/24px Conv_HelveticaNeueCyr-Roman;
+			}
+		}
+	}
+	.delivery{
+		margin-bottom: 70px;
+		&__img{
+			img{
+				width: 600px;
+			}
+		}
+	}
+	.gallery{
+		margin-bottom: 100px;
+		.border{
+			margin-bottom: 40px;
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
-	
+	.wrapper{
+
+	}
+	.border{
+		margin: 15px 0;
+	}
+	.banner{
+		h1{
+			font: 39px/44px Conv_ANTQUAB;
+		}
+		h2{
+			font: 17px/23px Conv_HelveticaNeueCyr-Roman;
+		}
+	}
+	.section{
+		&__1{
+			padding: 25px 0 40px;
+			&.flex{
+				flex-direction: column;
+			}
+		}
+		&__text{
+			width: 90%;
+    		margin-left: 0 !important;
+    		margin-right: 0 !important;
+    		h2{
+    			font: 27px Conv_ANTQUAB;
+    		}
+    		p{
+    			font: 15px/28px Conv_BKANT;
+    			margin-bottom: 20px;
+    		}
+		}
+		&__slider{
+			width: 100%;
+    		height: auto;
+		}
+		&__insta{
+			left: 20px;
+    		top: 30px;
+		}
+		&__img{
+			width: 100%;
+    		max-width: 500px;
+    		img{
+    			width: 100%;
+    		}
+		}
+	}
+	.cows{
+		&__slider{
+			width: 100%;
+			.slick-prev{
+				left: 13px;
+			}
+			.slick-next{
+				left: 63px;
+			}
+		}
+	}
+	.about{
+		padding: 30px 0 15px;
+		.wrapper{
+			&.flex{
+				flex-direction: column;
+			}
+		}
+	}
+	.title{
+		font: 30px Conv_ANTQUAB;
+	}
+	.products{
+		.border{
+			margin-bottom: 30px;
+		}
+		&__item{
+			margin-bottom: 60px;
+			&.flex{
+				flex-direction: column;
+			}
+			&_2{
+				&.flex{
+					flex-direction: column-reverse;
+				}
+			}
+		}
+		&__img{
+			width: 100%;
+			margin-bottom: 40px;
+			img{
+				width: 80%;
+				max-width: 400px;
+			}
+		}
+		&__info{
+			width: 90%;
+			&_left{
+				margin-left: 0;
+			}
+		}
+		&__title{
+			h3{
+				font: 25px Conv_ANTQUAB;
+			}
+		}
+		&__text{
+			font: 15px/30px Conv_ANTQUAB;
+		}
+		&__more{
+			&.flex{
+				justify-content: space-between;
+			}
+			span{
+				font: 28px Conv_ANTQUAB;
+				margin-right: 0;
+			}
+			button{
+				padding: 9px 28px;
+				font-size: 14px;
+			}
+		}
+	}
+	.comments{
+		padding: 8% 0 9%;
+		margin-bottom: 30px;
+		&__slider{
+			width: 250px;
+		}
+		&__quotes{
+			width: 250px;
+			img{
+				width: 70px;
+			}
+		}
+		&__text{
+			width: 250px;
+			font: 12px/24px Conv_HelveticaNeueCyr-Roman;
+			margin: 10px 0;
+		}
+		&__account{
+			width: 250px;
+		}
+		&__img{
+			width: 80px;
+    		height: auto;
+			img{
+				width: 100%;
+			}
+		}
+		&__name{
+			font: 13px/26px Conv_HelveticaNeueCyr-Roman;
+		}
+		&__info{
+			span{
+				font: 13px/24px Conv_HelveticaNeueCyr-Roman;
+			}
+		}
+	}
+	.delivery{
+		margin-bottom: 40px;
+		&.flex{
+			flex-direction: column-reverse;
+		}
+		&__img{
+			width: 100%;
+			img{
+				width: 100%;
+			}
+		}
+	}
+	.gallery{
+		margin-bottom: 40px;
+		.border{
+			margin-bottom: 45px;
+		}
+		&__item{
+			width: 50%;
+		}
+	}
 }
 
 
