--- a/cheese_land/scss/layout/_footer.scss
+++ b/cheese_land/scss/layout/_footer.scss
@@ -60,6 +60,14 @@ footer{
 		}
 		&__soc{
 			margin-right: 0;
+			/*display: flex !important;*/
+			a{
+				padding: 7.5px;
+				margin: 0;
+			}
+		}
+		&__phone{
+			/*display: flex !important;*/
 		}
 	}
 }
